added routes for camfind and imagga api

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,3 @@
 <div>
-	<h1>Hello World </h1>
-	<img src="{{url}}" />
-	<ul>
-		{{#each results}}
-		<li> {{this.text}} | {{this.score}} </li>
-		{{/each}}
-	</ul>
+	<h1>British Library Big Data Project </h1>
 </div>
