added inline styling and button to go back home

--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -1,4 +1,7 @@
 <div>
+	<img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=100>
+	<a href="/">Home</a>
+
 	<h1>{{title}}</h1>
 	<img src="{{url}}" />
 	<ul>
