--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,7 @@
 <div style="text-align:center">
-	<img src="/images/bl-logo.jpg" height=150 width=200>
+	<img class="bl-logo" src="/images/bl-logo.jpg" height=150 width=200>
 	<h1>British Library Machine Learning Project</h1>
 	<a href="/alchemy"><button>Alchemy API</button></a>
 	<a href="/camfind"><button>Camfind API</button></a>
 	<a href="/imagga"><button>Imagga API</button></a>
-	
 </div>
