--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,11 @@
 <div style="text-align:center">
 	<img class="bl-logo" src="/images/bl-logo.jpg" height=150 width=200>
 	<h1>British Library Machine Learning Project</h1>
+	<p>Browse APIs</p>
 	<a href="/alchemy"><button>Alchemy API</button></a>
 	<a href="/camfind"><button>Camfind API</button></a>
 	<a href="/imagga"><button>Imagga API</button></a>
+	<br/>
+	<a href="students.cs.ucl.ac.uk/2014/group12/">Project Website</a>
+	<img style="margin-left:50px;margin-top:50px" src="http://www0.cs.ucl.ac.uk/staff/G.Roberts/images/ucl0060.gif" height=40>
 </div>
