--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,6 +5,6 @@
 	<a href="/alchemy"><button>Alchemy API</button></a>
 	<a href="/imagga"><button>Imagga API</button></a>
 	<br/>
-	<a href="students.cs.ucl.ac.uk/2014/group12/">Project Website</a>
+	<a href="http://students.cs.ucl.ac.uk/2014/group12/">Project Website</a>
 	<img style="margin-left:50px;margin-top:50px" src="http://www0.cs.ucl.ac.uk/staff/G.Roberts/images/ucl0060.gif" height=40>
 </div>
