--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -3,7 +3,7 @@
 	<a href="/">Home</a>
 	<h1>{{apiName}}</h1>
 	<h2>{{title}}</h2>
-	<img src="{{url}}" />
+	<img src="{{url}}" style="max-width:50%;"/>
 	<ul>
 		{{#each results}}
 			{{#if this.text}}
