added search page and new db

--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -2,7 +2,7 @@
 	<img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=100>
 	<a href="/">Home</a>
 	<h1>{{apiName}}</h1>
-	<h2>{{title}}</h2>
+	<h2>{{imageTitle}}</h2>
 	<img src="{{url}}" style="max-width:50%;"/>
 	<ul>
 		{{#each results}}
@@ -16,30 +16,13 @@
 	</ul>
 	<h3>Details</h3>
 	<ul>
-		<li>release date: {{dateField}}</li>
-		<li>BL shelf :
-			<ul>
-				{{#each shelfmarks}}
-				<li>{{this}}</li>
-				{{/each}}
-			</ul>
-		</li>
-		<li>Title :
-			<ul>
-				{{#each title}}
-				<li>{{this}}</li>
-				{{/each}}
-			</ul>
-		</li>
-		<li>Edition : {{edition}}</li>
-		<li>Place : {{place}} </li>
-		<li>Issuance: {{issuance}}</li>
-		<li>Authors:
-			<ul>
-				{{#each authors.creator}}
-					<li>{{this}}</li>
-				{{/each}}
-			</ul>
-		</li>
+		<li>volume : {{volume}}</li>
+		<li>publisher : {{publisher}}</li>
+		<li>title : {{imageTitle}}</li>
+		<li>author : {{author}}</li>
+		<li>place of publication : {{publicationPlace}}</li>
+		<li>bookID : {{bookID}}</li>
+		<li>year : {{year}}</li>
+		<li>page : {{page}}</li>
 	</ul>
 </div>
