--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -11,7 +11,7 @@
 		<ul>
 		{{#each imageResults}}
 			<img src={{this.flickr_original_source}} height=70>
-			<li>{{this.title}}</li>
+			<li><a href="/search/{{this._id}}">{{this.title}}</a></li>
 			<ul>
 				<li>volume : {{this.volume}}</li>
 				<li>publisher : {{this.publisher}}</li>
