--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -6,23 +6,27 @@
 	</form>
 
 	<h1>{{noResults}}</h1>
-	{{#if imageResults}}
 		<h1>Your results</h1>
-		<ul>
-		{{#each imageResults}}
-			<img src={{this.flickr_original_source}} height=70>
-			<li><a href="/search/{{this._id}}">{{this.title}}</a></li>
-			<ul>
-				<li>volume : {{this.volume}}</li>
-				<li>publisher : {{this.publisher}}</li>
-				<li>title : {{this.title}}</li>
-				<li>author : {{this.first_author}}</li>
-				<li>place of publication : {{this.pubplace}}</li>
-				<li>bookID : {{this.book_identifier}}</li>
-				<li>year : {{this.year}}</li>
-				<li>page : {{this.page}}</li>
-			</ul>
-		{{/each}}
-		</ul>
-	{{/if}}
+		<div id="wrapper">
+			<div id="columns">
+				{{#if imageResults}}
+					{{#each imageResults}}
+					<div class="pin">
+						<img src={{this.flickr_medium_source}} >
+						<a href="/search/{{this._id}}">{{this.title}}</a>
+						<ul>
+							<li>volume : {{this.volume}}</li>
+							<li>publisher : {{this.publisher}}</li>
+							<li>title : {{this.title}}</li>
+							<li>author : {{this.first_author}}</li>
+							<li>place of publication : {{this.pubplace}}</li>
+							<li>bookID : {{this.book_identifier}}</li>
+							<li>year : {{this.year}}</li>
+							<li>page : {{this.page}}</li>
+						</ul>
+					</div>
+					{{/each}}
+				{{/if}}
+			</div>
+		</div>
 </div>
