added search tags functionality for alchemy and imagga

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -4,6 +4,16 @@
 		<input type="text" size="80" name="query">
    		<input type="submit" value="Search" class="submitButton">
 	</form>
+	<br>
+	<form action="/searchImaggaTags" method="post">
+		<input type="text" size="80" name="query">
+   		<input type="submit" value="Search" class="submitButton">
+	</form>
+	<br>
+	<form action="/searchAlchemyTags" method="post">
+		<input type="text" size="80" name="query">
+   		<input type="submit" value="Search" class="submitButton">
+	</form>
 
 	<h1>{{noResults}}</h1>
 		<h1>Your results</h1>
