--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,23 @@
 	<img class="bl-logo" src="/images/bl-logo.jpg" height=150 width=200>
 	<h1>British Library Machine Learning Project</h1>
 	<h2>Search Collections</h2>
+	<form action="">
+		<input type="radio" name="searchType" value="title">By Titles | 
+		<input type="radio" name="searchType" value="alchemy">By Alchemy API |
+		<input type="radio" name="searchType" value="imagga">By Imagga API
+	</form>
+	<br>
 	<form action="/search" method="post">
+		<input type="text" size="80" name="query">
+   		<input type="submit" value="Search" class="submitButton">
+	</form>
+	<br>
+	<form action="/searchImaggaTags" method="post">
+		<input type="text" size="80" name="query">
+   		<input type="submit" value="Search" class="submitButton">
+	</form>
+	<br>
+	<form action="/searchAlchemyTags" method="post">
 		<input type="text" size="80" name="query">
    		<input type="submit" value="Search" class="submitButton">
 	</form>
