added some styling to the pages

--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -1,6 +1,9 @@
 <div style="width:75%;margin:0 auto">
-	<img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=100>
-	<a href="/">Home</a>
+	<div style="max-height:75px">
+		<a href="/"><img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=100></a>
+		<a href="/search"><button>Back to search</button></a>
+	<div>
+	<hr width="100%"> 
 	<h1>{{apiName}}</h1>
 	<h2>{{imageTitle}}</h2>
 	<img src="{{url}}" style="max-width:50%;"/>
