--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,8 +5,10 @@
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<title>BL Web App</title>
-
+    	<link rel="stylesheet" href="/stylesheets/bootstrap.min.css"></link>
+    	<link rel="stylesheet" href="/stylesheets/font-awesome.min.css"></link>
     	<script type="text/javascript" src="/javascripts/jquery-1.11.2.min.js"></script>
+    	<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
     	<script>
     		$(window).load(function(){
     			$("#loading").fadeOut(1000);
@@ -44,6 +46,9 @@
     	</script>
 
     	<style>
+    	body{
+    		font-family:verdana;
+    	}
     	@-webkit-keyframes thumb {
 			0% { -webkit-transform: scale(1); }
 			50% { -webkit-transform: scale(0.95); }
@@ -60,7 +65,7 @@
 
 		#wrapper {
 			width: 96%;
-			margin: 50px auto;
+			margin: 20px auto;
 		}
 
 		#columns {
@@ -134,5 +139,8 @@
 	<body>
 		<div id="loading"></div>
 		{{{body}}}
+		<div style="width:100%;height:30px;bottom:0px;position:relative;background-color:#000">
+			<img src='http://www.ucl.ac.uk/visual-identity/logos/standalone.png' height=30 style="float:right"/>
+		</div>
 	</body>
 </html>
