--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,20 +1,27 @@
-<div>
-	<h1>search page</h1>
-	<form action="">
-		<input type="radio" name="searchType" value="title" checked>By Titles | 
-		<input type="radio" name="searchType" value="alchemy">By Alchemy API |
-		<input type="radio" name="searchType" value="imagga">By Imagga API
-	</form>
-	<br>
-	<form id="query" action="/search" method="post">
-		<input type="text" size="80" name="query">
-   		<input type="submit" value="Search" class="submitButton">
-	</form>
-	<br>
-	{{#if searchQuery}}
-		<h1>Search results by "{{searchType}}" for "{{searchQuery}}"</h1>
-	{{/if}}
-	<h2>{{noResults}}</h2>
+<div style="min-height:95.2vh">
+	<div style="padding:10px">
+		<a href="/"><img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=100></a>
+		<h2 style="display:inline;margin-left:20px;">Search page</h2>
+		<br>
+		<br>
+		<form action="">
+			<input type="radio" name="searchType" value="title" checked> By Titles | 
+			<input type="radio" name="searchType" value="alchemy"> By Alchemy API |
+			<input type="radio" name="searchType" value="imagga"> By Imagga API
+		</form>
+		<br>
+		<form id="query" action="/search" method="post">
+			<input type="text" size="80" name="query">
+   			<input type="submit" value="Search" class="submitButton">
+		</form>
+		<div style="height:54px">
+			{{#if searchQuery}}
+				<h4>Search results by "{{searchType}}" for "{{searchQuery}}"</h4>
+			{{/if}}
+			<h5>{{noResults}}</h5>
+		</div>
+	</div>
+	<div style="background: url(https://img.new.livestream.com/accounts/0000000000047d9b/9a1fe8fe-01d3-4e4e-9791-b8c6817b4ef7.gif) ;height:100%; min-height:56.4vh;border-top:solid black 2px">
 	<div id="wrapper">
 		<div id="columns">
 			{{#if imageResults}}
@@ -36,5 +43,6 @@
 				{{/each}}
 			{{/if}}
 		</div>
+	</div>
 	</div>
 </div>
