--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<div style="text-align:center;margin-top:10vh;height:85.2vh">
+<div style="text-align:center;margin-top:10vh;height:86.9vh">
 	<img class="bl-logo" src="/images/bl-logo.jpg" height=150 width=200>
 	<h1>British Library Machine Learning Project</h1>
 	<h4>Browse Digital Collections</h4>
@@ -8,9 +8,8 @@
 		<input type="radio" name="searchType" value="imagga"> By Imagga API
 	</form>
 	<br>
-	<form id="query" action="/search" method="post">
-		<input type="text" size="80" name="query">
-		<br>
+	<form id="query" action="/search" method="post" class="form-group">
+		<input type="text" name="query" class="form-control" style="width:50%;margin:0 auto;border-radius:0px">
 		<br>
 		<input type="submit" value="Search" class="submitButton">
 	</form>
