--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -139,8 +139,11 @@
 	<body>
 		<div id="loading"></div>
 		{{{body}}}
+		<br>
 		<div style="width:100%;height:30px;bottom:0px;position:relative;background-color:#000">
 			<img src='http://www.ucl.ac.uk/visual-identity/logos/standalone.png' height=30 style="float:right"/>
+			<a href="http:/students.cs.ucl.ac.uk/2014/group12" style="float:right;padding-top:10px">About</a>
 		</div>
+		
 	</body>
 </html>
