added tags styling and tag score handler

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,6 +8,7 @@
 		<input type="radio" name="searchType" value="imagga"> By Imagga API
 	</form>
 	<br>
+	{{foo}}
 	<form id="query" action="/search" method="post" class="form-group">
 		<input type="text" name="query" class="form-control" style="width:50%;margin:0 auto;border-radius:0px">
 		<br>
