--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -21,7 +21,7 @@
 			<h5>{{noResults}}</h5>
 		</div>
 	</div>
-	<div style="background: url(https://img.new.livestream.com/accounts/0000000000047d9b/9a1fe8fe-01d3-4e4e-9791-b8c6817b4ef7.gif) ;height:100%;min-height:71.5vh;border-top:solid black 2px">
+	<div style="background: url(http://subtlepatterns.com/patterns/swirl_pattern.png) ;height:100%;min-height:71.5vh;border-top:solid black 2px">
 	<div id="wrapper">
 		<div id="columns">
 			{{#if imageResults}}
