250 limit on search, footer fix and some styling

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -134,6 +134,9 @@
     		height: 100%;
     		width: 100%;
 		}
+		.panel-body{
+			padding-top:2px;
+		}
 		.tags a {
 			display: inline-block;
 			height: 21px;
