--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -1,15 +1,15 @@
-<div style="width:80%;margin:0 auto;margin-bottom:40px;height:100%;min-height:100vh">
+<div style="width:80%;margin:0 auto;margin-bottom:40px;height:100%;">
 	<div style="max-height:75px;padding:10px">
 		<a href="/"><img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=100></a>
 		<a href="/search">Back to search</a>
 	</div>
 	<hr width="100%">
-	{{helpers.foo}}
+	<div style="min-height:1400px">
 	<div style="width:100%;margin-bottom:40px"> 
 		<h3>{{imageTitle}}</h3>
 	</div>
 	<img src="{{url}}" style="max-width:50%;"/>
-	<div style="float:right;width:45%;">
+	<div style="float:right;width:48%;">
 		<div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">Image Details</h3>
@@ -56,5 +56,6 @@
 				</div>
             </div>
       	</div>
+	</div>
 	</div>
 </div>
