added history.go(-1) in image page

--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -1,7 +1,7 @@
 <div style="width:80%;margin:0 auto;margin-bottom:40px;height:100%;">
 	<div style="max-height:75px;padding:10px">
 		<a href="/"><img class="bl-logo" src="/images/bl-logo.jpg" height=75 width=100></a>
-		<a href="/search">Back to search</a>
+		<a href="javascript:history.go(-1)">Back to search</a>
 	</div>
 	<hr width="100%">
 	<div style="min-height:1400px">
