--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -11,7 +11,7 @@
 		</form>
 		<br>
 		<form id="query" action="/search" method="post">
-			<input type="text" size="80" name="query">
+			<input value="{{searchQuery}}" type="text" size="80" name="query">
    			<input type="submit" value="Search" class="submitButton">
 		</form>
 		<div style="height:54px">
