css and js cleanup

--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -1,5 +1,8 @@
-<div>
-	<h1>ERROR</h1>
-	<h2>{{message}}</h2>
-	<p>{{error}}<p>
+<div class="page center-text">
+	<h1>Request Denied</h1>
+	
+	<div class="alert alert-danger error" role="alert">
+		<h4>{{error}}</h4>
+	</div>
+	<p><a href="/">Back to homepage</a><p>
 </div>
